--- a/ImageRotateAndZoom/Base.lproj/Main.storyboard
+++ b/ImageRotateAndZoom/Base.lproj/Main.storyboard
@@ -32,17 +32,17 @@
             </objects>
             <point key="canvasLocation" x="-1199" y="340"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Menu Table View Controller-->
         <scene sceneID="2Hk-OD-5sX">
             <objects>
-                <tableViewController id="c4x-eK-Rl7" sceneMemberID="viewController">
+                <tableViewController id="c4x-eK-Rl7" customClass="MenuTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="2Pm-zN-S1p">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="sectionIndexBackgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="lOe-6S-3qv">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MenuCell" id="lOe-6S-3qv">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lOe-6S-3qv" id="yEY-Ld-7yo">
@@ -50,7 +50,24 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="oXQ-WW-sGF">
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oXQ-WW-sGF" id="tSD-bL-Iqr">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="aaY-5I-UdW">
+                                <rect key="frame" x="0.0" y="116" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aaY-5I-UdW" id="2d9-Ol-H6w">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
                         </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="c4x-eK-Rl7" id="Gmk-sT-YRz"/>
                             <outlet property="delegate" destination="c4x-eK-Rl7" id="4YN-Cy-Wku"/>
@@ -113,17 +130,20 @@
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZC-62-mPz">
                                 <rect key="frame" x="0.0" y="69" width="30" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <state key="normal" image="last.png"/>
+                                <state key="normal" image="cancelChange">
+                                    <color key="titleShadowColor" red="0.58039215686274503" green="0.12941176470588234" blue="0.5725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="lastImageButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lLf-oy-u3Q"/>
                                 </connections>
                             </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k7i-bn-RnB">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k7i-bn-RnB">
                                 <rect key="frame" x="345" y="69" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="Mpy-4E-swe"/>
                                     <constraint firstAttribute="width" secondItem="k7i-bn-RnB" secondAttribute="height" multiplier="15:15" id="SEx-RG-Gtl"/>
                                 </constraints>
+                                <state key="normal" image="save"/>
                                 <connections>
                                     <action selector="saveImageButtonClecked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4la-zC-ada"/>
                                 </connections>
@@ -252,7 +272,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Funny" leftItemsSupplementBackButton="YES" id="zSz-eh-IYL">
                         <barButtonItem key="backBarButtonItem" title="asdffsd" id="Xqd-Ub-F9r"/>
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="hw6-eS-s0y"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="hw6-eS-s0y">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="addButton" destination="ege-p1-o2F" id="SIE-1h-od3"/>
@@ -281,6 +303,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="cancelChange" width="30" height="30"/>
         <image name="last.png" width="50" height="50"/>
+        <image name="save" width="30" height="30"/>
     </resources>
 </document>
